--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,10 +1,46 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<!-- CSS only -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     {{>header}}
-<h1>Nueva app</h1>
+    <div class="main">
+     <h1>Tipsy</h1>
+     <div class="form">
+     <form>
+          <div class="row" style="text-align: center; justify-content: center;">
+            <div class="col-md-6">
+              <label for="cantidad" class="form-label"># de Ingredientes</label>
+              <div class="input-group has-validation">
+                <input type="text" class="form-control" name="cantidad" id="cantidad" placeholder="# Ingredientes">
+              </div>
+            </div>
+          </div>
+            <div class="row" style="margin-top:1.5rem; text-align: center; justify-content: center;">
+                <div class="form-group col-md-6">
+                <label for="ingrediente">Primer Ingrediente</label>
+                <select id="ingrediente" name="ingrediente" class="form-control">
+                    <option selected>Ingrediente...</option>
+                    <option value="gin">Gin</option>
+                </select>
+            </div>
+            </div>
+
+            <div class="row" style="margin-top:1.5rem; text-align: center; justify-content: center;">
+                <p id="result"></p>
+            </div>
+            </div>
+          <hr class="my-4">
+
+          <button type="button" onClick="getDrink()" class="btn btn-primary">Submit</button>
+        </form>
+        </div>
+    </div>
 <script src="/index.js"></script> 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
