--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="style.css">
 <!-- CSS only -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     {{>header}}
@@ -29,7 +30,19 @@
             </div>
 
             <div class="row" style="margin-top:1.5rem; text-align: center; justify-content: center;">
-                <p id="result"></p>
+                <div id="spinner"></div>
+                <div id="loaded">                
+                  <table id="table-result">
+                     <thead>
+                        <tr>
+                          <th>Ingrediente</th>
+                          <th>Cantidad</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                      </tbody>
+                  </table>
+                </div>
             </div>
             </div>
           <hr class="my-4">
