--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -22,9 +22,66 @@
             <div class="row" style="margin-top:1.5rem; text-align: center; justify-content: center;">
                 <div class="form-group col-md-6">
                 <label for="ingrediente">Primer Ingrediente</label>
-                <select id="ingrediente" name="ingrediente" class="form-control">
+                <select id="ingrediente" name="ingrediente" class="sform-control">
                     <option selected>Ingrediente...</option>
                     <option value="gin">Gin</option>
+                    <option value="vermouth rosso">Vermouth rosso</option>
+                    <option value="campari">Campari</option>
+                    <option value="tonic">Tonic</option>
+                    <option value="bourbon">Bourbon</option>
+                    <option value="sugar cube">Sugar cube</option>
+                    <option value="bitters">Bitters</option>
+                    <option value="water">Water</option>
+                    <option value="rye whiskey">Rye whiskey</option>
+                    <option value="espresso">Espresso</option>
+                    <option value="coffee liqueur">Coffee liqueur</option>
+                    <option value="vermouth">Vermouth</option>
+                    <option value="orange bitters">Orange bitters</option>
+                    <option value="lemon juice">Lemon juice</option>
+                    <option value="whiskey">Whiskey</option>
+                    <option value="egg white">Egg white</option>
+                    <option value="orange peel">Orange peel</option>
+                    <option value="tequila">Tequila</option>
+                    <option value="orange liqueur">Orange liqueur</option>
+                    <option value="sweet vermouth">Sweet vermouth</option>
+                    <option value="angostura bitters">Angostura bitters</option>
+                    <option value="lemon peel">Lemon peel</option>
+                    <option value="lime juice">Lime juice</option>
+                    <option value="syrup">Syrup</option>
+                    <option value="mint leaves">Mint leaves</option>
+                    <option value="white rum">White rum</option>
+                    <option value="peach schnapps">Peach schnapps</option>
+                    <option value="orange juice">Orange juice</option>
+                    <option value="pineapple juice">Pineapple juice</option>
+                    <option value="vodka">Vodka</option>
+                    <option value="cranberry juice">Cranberry juice</option>
+                    <option value="raspberry liqueur">Raspberry liqueur</option>
+                    <option value="prosecco">Prosecco</option>
+                    <option value="aperol">Aperol</option>
+                    <option value="soda water">Soda water</option>
+                    <option value="triple sec">Triple sec</option>
+                    <option value="bourbon whiskey">Bourbon whiskey</option>
+                    <option value="angostura bitter">Angostura bitter</option>
+                    <option value="claret wine">Claret wine</option>
+                    <option value="rum">Rum</option>
+                    <option value="coconut juice">Coconut juice</option>
+                    <option value="scotch">Scotch</option>
+                    <option value="honey-ginger syrup">Honey-ginger syrup</option>
+                    <option value="blended scotch">Blended scotch</option>
+                    <option value="ice">Ice</option>
+                    <option value="tomato juice">Tomato juice</option>
+                    <option value="tabasco">Tabasco</option>
+                    <option value="salt">Salt</option>
+                    <option value="black pepper">Black pepper</option>
+                    <option value="ginger beer">Ginger beer</option>
+                    <option value="raspberry syrup">Raspberry syrup</option>
+                    <option value="dark rum">Dark rum</option>
+                    <option value="orgeat">Orgeat</option>
+                    <option value="grapefruit juice">Grapefruit juice</option>
+                    <option value="pisco">Pisco</option>
+                    <option value="cognac">Cognac</option>
+                    <option value="liqueur">Liqueur</option>
+                    <option value="blackberries">Blackberries</option>
                 </select>
             </div>
             </div>
